# sibyl

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  list_gemini_models.py  pyproject.toml  test_gemini.py
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
data/fixtures/: .gitkeep
data/models/: .gitkeep
docs/: ARCHITECTURE.md  BUILD_PLAN.md  IDEAS.md  IDEATION_PROMPT.md  PRD.md  PRODUCTION_PLAN.md  README_DRAFT.md  RESEARCH.md  SEED_DATA.md  SPONSOR_DEFENSE.md  SUBMISSION.md  UI.md  WINNER_ANALYSIS.md
public/: index.html
scripts/: bench.py  calibrate.py  demo.sh  run_server.sh
sibyl/: __init__.py  agent.py  anchor.py  cache.py  calibration.py  classifier.py  config.py  model_router.py  parser.py  reasoning.py  retrieval.py  server.py
tests/: conftest.py  test_agent.py  test_anchor.py  test_cache.py  test_calibration.py  test_classifier.py  test_model_router.py  test_parser.py  test_reasoning.py  test_retrieval.py  test_server.py
