[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sibyl"
version = "1.0.0"
description = "Retrieval-augmented forecasting agent for Prophet Arena — calibrated probability predictions with cost-tiered LLM routing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sibyl Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "litellm>=1.60.0",
    "scikit-learn>=1.6.0",
    "diskcache>=5.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["sibyl"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
